--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,11 @@ before_script:
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - go test -v -race ./...                   # Run all the tests with the race detector enabled
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
   - go vet ./...                             # go vet is the official Go static analyzer
   - megacheck ./...                          # "go vet on steroids" + linter
   - gocyclo -over 19 $GO_FILES               # forbid code with huge functions
   - golint -set_exit_status $(go list ./...) # one last linter
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
